    and Psh::Util
  * Changed builtin alias so that 'alias name' displays the
    alias definition for that name
  * The builtin eval strategy now checks the Psh::Builtins
    namespace for a function with the name of the builtin
	after it checked %built_ins
  * Fixed the initialization so the short hostname is
    calculated from the longhost name instead of calling
	hostname -s

------------------------------------------------------------
0.004                                           [1999-12-13]
------------------------------------------------------------

This release fixes bugs, refactors the code, and adds the
following features:

  * Background process management much more like bash.

  * Perl code in addition to executables may be put in the
    background.

  * Pipelines.

  * Initial internationalization.

  * New built-ins: 'alias', 'export', 'setenv'.

  * A flexible set of evaluation strategies that can be
    selected or reordered by setting a configuration
    variable.

  * Prompt strings can have escapes like \07 (ASCII BEL) or
    \10 (ASCII LF).

  * avoided trying to save history if there wasn't even a
    ReadLine module

  * added $psh::debugging variable to hold the debugging
    state, so it can be turned on and off in a running psh

  * A $psh::echo variable to control whether perl results of
	evaluation are printed.

  * The which builtin now shows which strategy will apply to
	a given command line

  * Grab more input automatically if <<BLOCK appears
	anywhere on the line, or if the line ends with an open
	brace.

  * results of psh::which searches are hashed.

  * Thorough documentation of every user-accessible variable
	and function


------------------------------------------------------------
0.003
------------------------------------------------------------

Contributions from Markus Peter:

  * Rudimentary background jobs handling and job management.

  * Signal handling.

  * Filename completion.

  * Updates to history handling.